--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "course-directory-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aocsa.github.io/course-directory-app",
+  "homepage": "https://abby25fly.github.io/Curse-ReactRouting2",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
